force-app/main/default/objects/Agreement_Time_Tracker__c/Agreement_Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>Records are created whenever an agreement status category changes to &apos;In Negotiations&apos;/&apos;In Signatures&apos; and/or &apos;On Hold&apos; changes.</description>
    <label>Agreement Time Tracker</label>
    <nameField>
        <displayFormat>ATT-{00000}</displayFormat>
        <label>Agreement Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Time Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>