force-app/main/default/objects/Agreement_Time_Tracker__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Time Trackers</relationshipLabel>
    <relationshipName>Agreement_Time_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>