force-app/main/default/objects/Agreement_Time_Tracker__c/fields/Duration_inSignature__c.field-meta.xml
<CustomField>
    <fullName>Duration_inSignature__c</fullName>
    <formula>End_Date__c -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Signature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>