force-app/main/default/objects/Agreement_Time_Tracker__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>