force-app/main/default/objects/Agreement_Time_Tracker__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify the records which was created when agreement&apos;s &apos;On Hold&apos; is checked/unchecked. 
That is, if Flag is set, the the record details gives when agreement was on hold.</description>
    <inlineHelpText>This is used to identify the records which was created when agreement&apos;s &apos;On Hold&apos; is checked/unchecked. 
That is, if Flag is set, the the record details gives when agreement was on hold.</inlineHelpText>
    <label>Flag</label>
    <type>Checkbox</type>
</CustomField>