force-app/main/default/objects/Agreement_Time_Tracker__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>